# genesis

./: .gitignore  Cargo.toml  README.md  default.nix  shell.nix
.github/workflows/: ci.yml
dada/: Cargo.toml  README.md  default.nix  flake.nix  shell.nix
dada/samples/: 1984.txt  jabberwocky.txt  metamorphosis.txt  siddharta.txt
dada/src/: chromosome.rs  main.rs
nix/: default.nix  sources.json
samples/: anna_karenina.txt  brothers_karamazov.txt  lorem_ipsum.txt  problems_of_philosophy.txt  thus_spoke_zarathustra.txt
src/: chromosome.rs  main.rs
voyager/: Cargo.toml  default.nix  flake.nix  shell.nix
voyager/src/: chromosome.rs  main.rs  map.rs
