[package]
name = "genesis"
version = "0.1.0"
authors = ["Bernardo Meurer <bernardo@meurer.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.15.0", features = ["improved_unicode"] }
rand = "0.7.3"
rayon = "1.5.0"
triple_accel = "0.3.4"
