[package]
name = "voyager"
version = "0.1.0"
authors = ["Bernardo Meurer <bernardo@meurer.org>"]
edition = "2018"

[dependencies]
euclid = "0.22.2"
fxhash = "0.2.1"
itertools = "0.10.0"
ordered-float = "2.1.1"
rand = "0.8.3"
rayon = "1.5.0"
sdl2 = "0.34.3"

[profile.release]
lto = "fat"
codegen-units = 1
